<resources>
    <string name="app_name">Intelligent Saving</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity -->
    <string name="navi_home">Home</string>
    <string name="navi_events">Events</string>
    <string name="navi_settings">Settings</string>
    <string name="navi_message">Message</string>
    <string name="error_message">"The ERROR might be caused by:\n1.The server is offline.\n2.Your device is offline.</string>>

    <!-- client fragment -->
    <string name="client_fragment_title">Student Login/Register</string>
    <string name="client_fragment_name">Name:  </string>
    <string name="client_fragment_student_id">Student ID: </string>
    <string name="client_fragment_email">Email: </string>
    <string name="client_fragment_btn1">Log in</string>
    <string name="client_fragment_btn2">Register</string>

    <!-- admin fragment -->
    <string name="admin_fragment_title">Teacher Register</string>
    <string name="admin_fragment_pwd">Admin Password: </string>
    <string name="admin_fragment_id">Name:  </string>
    <string name="admin_fragment_btn">Register</string>

    <!-- home dashboard fragment -->
    <string name="btn_ok">Close</string>
    <string name="btn_follow">Follow this</string>

    <!-- events fragment -->
    <string name="tab_words">Word</string>
    <string name="tab_numbers">Numbers</string>

    <!-- hashtag fragment -->
    <string name="tv_title">New Campus Event</string>
    <string name="tv_location">Location</string>
    <string name="tv_storey">Storey</string>
    <string name="tv_event_img">Event Photo</string>
    <string name="tv_event">Event</string>
    <string name="btn_add">Add this event</string>
    <string name="btn_cancel">Cancel</string>

    <!-- setting fragment -->
    <string name="settings_fragment_title">Personal settings</string>
    <string name="settings_fragment_sethead">click to set portrait</string>
    <string name="settings_fragment_name">Name: </string>
    <string name="settings_fragment_email">E-mail: </string>
    <string name="settings_fragment_id">Student ID: </string>
    <string name="settings_fragment_portrait">Select your portrait </string>
    <string name="settings_fragment_dialog_btn">OK </string>

</resources>
