<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_location"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_events_hashtag_dialog_spinner1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_storey"
        android:id="@+id/textView1"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_events_hashtag_dialog_spinner2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_event"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_events_hashtag_dialog_ed1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_event_img"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="@dimen/por_width"
        android:layout_height="@dimen/por_width"
        android:id="@+id/fragment_events_hashtag_dialog_iv1"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_event_click"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add"
            android:id="@+id/fragment_events_hashtag_dialog_btn1"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:id="@+id/fragment_events_hashtag_dialog_btn2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>